@@ -56,12 +56,19 @@ static boolean sound_initialized = false;
 
 static Mix_Chunk sound_chunks[NUMSFX];
 static int channels_playing[NUM_CHANNELS];
+static Mix_Chunk ToyChunks[NUMSFX][NUM_CHANNELS];
 
 static int mixer_freq;
 static Uint16 mixer_format;
 static int mixer_channels;
 
 int use_libsamplerate = 0;
+
+/* I_SDL_PitchBendFun() -- Messes with a sound adding variable pitch support */
+// GhostlyDeath <July 20, 2010> -- Has fun with a sound
+void I_SDL_PitchBendFun(void *udata, Uint8 *stream, int len)
+{
+}
 
 // When a sound stops, check if it is still playing.  If it is not, 
 // we can mark the sound data as CACHE to be freed back for other
@@ -90,11 +97,19 @@ static void ReleaseSoundOnChannel(int channel)
         // Playing on this channel? if so, don't release.
 
         if (channels_playing[i] == id)
+        {
+			if (ToyChunks[id][channel].abuf)
+				Z_Free(ToyChunks[id][channel].abuf);
+			ToyChunks[id][channel].allocated = ToyChunks[id][channel].alen = ToyChunks[id][channel].abuf = NULL;
             return;
+        }
     }
 
     // Not used on any channel, and can be safely released
     
+    if (ToyChunks[id][channel].abuf)
+	    Z_Free(ToyChunks[id][channel].abuf);
+	ToyChunks[id][channel].allocated = ToyChunks[id][channel].alen = ToyChunks[id][channel].abuf = NULL;
     Z_ChangeTag(sound_chunks[id].abuf, PU_CACHE);
 }
 
@@ -573,9 +588,17 @@ static void I_SDL_UpdateSoundParams(int handle, int vol, int sep)
 //  is set, but currently not used by mixing.
 //
 
+#define FEATURE_RANDSOUNDPITCH
 static int I_SDL_StartSound(int id, int channel, int vol, int sep)
 {
     Mix_Chunk *chunk;
+#ifdef FEATURE_RANDSOUNDPITCH
+	double PitchScale = 1.0;
+	double Position = 0;
+	Uint16* InP;
+	Uint16* OutP;
+	int OutPos, InLim, OutLim, i;
+#endif
 
     if (!sound_initialized)
     {
@@ -597,8 +620,51 @@ static int I_SDL_StartSound(int id, int channel, int vol, int sep)
     }
 
     // play sound
-
+#ifdef FEATURE_RANDSOUNDPITCH
+	// Change pitch
+	PitchScale = 0.0;
+	do
+	{
+		PitchScale = ((double)127) / ((double)((int)M_Random() + 1));
+	} while (PitchScale < 0.75 || PitchScale > 1.25);
+	
+	// Get new buffer
+	ToyChunks[id][channel].allocated = 1;
+	ToyChunks[id][channel].alen = ((int)((double)(chunk->alen >> 2) / PitchScale)) << 2;
+	ToyChunks[id][channel].abuf = Z_Malloc(ToyChunks[id][channel].alen, PU_STATIC, &ToyChunks[id][channel].abuf);
+	ToyChunks[id][channel].volume = MIX_MAX_VOLUME;
+	
+	memset(ToyChunks[id][channel].abuf, 0, ToyChunks[id][channel].alen);
+	//printf("%i * %g = %i\n", chunk->alen, PitchScale, ToyChunks[id][channel].alen);
+	
+#if 1
+	// Get 16-bit pointers from in and out
+	InP = chunk->abuf;
+	OutP = ToyChunks[id][channel].abuf;
+	
+	// Get limits
+	InLim = chunk->alen >> 2;
+	OutLim = ToyChunks[id][channel].alen >> 2;
+	
+	for (OutPos = 0, Position = 0.0; OutPos < OutLim && (int)Position < InLim; Position += PitchScale, OutPos++)
+		for (i = 0; i < 2; i++)
+			OutP[(OutPos * 2) + i] = InP[((int)Position * 2) + i];
+	
+#else
+	// Convert
+	for (OutPos = 0, Position = 0.0; OutPos < ToyChunks[id][channel].alen && Position < (double)chunk->alen; Position += PitchScale, OutPos++)
+	{
+		//printf("%i %g\n", OutPos, Position);
+		ToyChunks[id][channel].abuf[OutPos] = chunk->abuf[(int)Position];
+		//printf("[%i] %x <- [%i] %x\n", OutPos, ToyChunks[id][channel].abuf[OutPos], (int)Position, chunk->abuf[(int)Position]);
+	}
+#endif
+	
+	// Now play
+	Mix_PlayChannelTimed(channel, &ToyChunks[id][channel], 0, -1);
+#else
     Mix_PlayChannelTimed(channel, chunk, 0, -1);
+#endif
 
     channels_playing[channel] = id;
 
